2011-02-18  Mike Frysinger  <vapier@gentoo.org>

  * src/bfin/bfin-part.c (_bfin_part_init): Add missing "void" to param list.

  * include/urjtag/parse.h: Document the various stream functions.

2011-02-17  Mike Frysinger  <vapier@gentoo.org>

  * data/analog/bf548/STEPPINGS: Add bf54x-0.4 support.

2011-02-09  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/usbconn.h (urj_usbconn_cable_t): Add an "interface" member.
  * include/urjtag/cable.h (URJ_CABLE_PARAM_KEY_INTERFACE): New key for ftdi.
  * src/tap/cable.c (cable_param): Handle new "interface" key.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_generic_usbconn_connect):
    Parse new "interface" cable parameter.
  * src/tap/usbconn/libftd2xx.c: Use new "interface" selection.
  * src/tap/usbconn/libftdi.c: Likewise.
  * sysdep.h: Auto undefine "interface" for Windows.

2011-02-06  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable_list.h: Add usbjtagrs232.
  * src/tap/cable/generic_usbconn_list.h: Add usbjtagrs232.
  * src/tap/cable/ft2232.c: Add usbjtagrs232 support by Orasanu Lucian.

  * doc/UrJTAG.txt: Note by Bogdan Petrisor for pkg-config requirement.

2010-12-19  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/xc6slx45/STEPPINGS: Add stepping 2 from Sébastien Bourdeauducq.

2010-11-28  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/ejtag.c (ejtag_bus_init): Punt unused EJALL register lookup.
    Make sure EJADDRESS and EJDATA registers exist before we use them.

2010-11-19  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (LT_INIT): Fix typo in fallback macro.

  * src/bus/blackfin.c, src/bus/blackfin.h: New unified Blackfin bus core.
  * src/bus/bf518f_ezbrd.c, src/bus/bf533_stamp.c, src/bus/bf537_stamp.c,
    src/bus/bf548_ezkit.c, src/bus/bf561_ezkit.c: Convert to unified
    Blackfin bus core.
  * configure.ac, src/bus/buses_list.h, src/bus/Makefile.am: Drop board
    specific bus options and have just one "blackfin" bus option since